--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "firebase": "^8.6.8",
+    "firebase-admin": "^11.10.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "normalize.css": "^8.0.1",
